--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "joi": "^17.13.3",
+    "mongoose": "^8.9.0",
     "passport": "^0.7.0",
+    "passport-google-oauth2": "^0.2.0",
     "passport-google-oauth20": "^2.0.0"
   }
 }
