--- a/.gitignore
+++ b/.gitignore
@@ -661,3 +661,4 @@ node_modules/dotenv/lib/env-options.js
 node_modules/dotenv/lib/main.d.ts
 node_modules/dotenv/lib/main.js
 .env
+package-lock.json
