create blog post route

--- a/.gitignore
+++ b/.gitignore
@@ -662,3 +662,4 @@ node_modules/dotenv/lib/main.d.ts
 node_modules/dotenv/lib/main.js
 .env
 package-lock.json
+blogImages/image-1735599755355-386681000.png
