Fix: Update user model and authentication routes
- Updated `src/models/user.js` to include new validation rules.
- Modified `src/routes/googleAuth.js` to handle new OAuth flow.
- Refactored `src/routes/users.js` to improve performance and readability.

Changes not staged for commit:
- Updated `.gitignore` to exclude new temporary files.

--- a/.gitignore
+++ b/.gitignore
@@ -664,3 +664,4 @@ node_modules/dotenv/lib/main.js
 package-lock.json
 blogImages/
 lessonFiles/file-1735382467565-458850439.png
+lessonFiles/file-1736371213896-413759903.jpeg
