--- a/.gitignore
+++ b/.gitignore
@@ -665,3 +665,4 @@ package-lock.json
 blogImages/
 lessonFiles/file-1735382467565-458850439.png
 lessonFiles/file-1736371213896-413759903.jpeg
+lessonFiles/file-1736417694709-429613876.png
